# trackers_brubotics

./: .gitignore  CMakeLists.txt  README.md  create_tracker.sh  package.xml  plugins.xml
MRS_files/: control_manager.cpp  se3_controller.cpp
TO CLEAN/launch/: trackers_brubotics.launch
cfg/: bypass_tracker.cfg  mpc_copy_tracker.cfg  mpc_tracker_copy.cfg  mpc_tracker_interns.cfg
config/: address.yaml
config/default/: dergPm_tracker.yaml  derg_tracker.yaml  dergbryan_tracker.yaml  mpc_copy_tracker.yaml
config/private/: dergbryan_tracker.yaml
config/public/: dergbryan_tracker.yaml  mpc_copy_tracker.yaml
include/: mpc_copy_tracker.h  mpc_tracker_solver.h
launch/: trackers_brubotics.launch
msg/: CollisionAvoidanceDERG.msg  ComputationalTime.msg  DSM.msg  DistanceBetweenUavs.msg  FutureTrajectoryTube.msg  TrajectoryTracking.msg
simulation/: just_flying.sh
simulation/custom_configs/: control_manager.yaml  control_manager_old.yaml  controllers.yaml  derg.yaml  gain_manager.yaml  se3.yaml  uav_manager.yaml
simulation/one_drone_DERG/: session.yml
simulation/one_drone_graphs/: session.yml
simulation/one_drone_interns/: session.yml
src/alpha_drg/: alpha_drg.cpp
src/bypass_tracker/: bypass_tracker.cpp  draft.txt
src/dergPm_tracker/: dergPm_tracker.cpp  dergPm_tracker_backup_old_EOM.cpp  dergPm_tracker_test_new_EOM.cpp  dergPm_tracker_test_new_EOM_07_08_18u.cpp  dergPm_tracker_test_new_EOM_backup_06_08_22u.cpp  dergPm_tracker_test_new_EOM_backup_07_08_13uu.cpp
src/derg_tracker/: derg_tracker.cpp
src/dergbryan_tracker/: dergbryan_tracker(copy).cpp  dergbryan_tracker.cpp
src/distributed_erg_tracker/: distributed_erg_tracker.cpp
src/line_tracker_interns/: line_tracker_interns.cpp
src/modified_mpc/: modified_mpc.cpp
src/mpc_copy_tracker/: mpc_copy_tracker.cpp
src/mpc_tracker_copy/: mpc_tracker_copy.cpp
src/mpc_tracker_interns/: mpc_tracker_interns.cpp
