<?xml version="1.0"?>
<package format="2">
  <name>trackers_brubotics</name>
  <version>0.0.0</version>
  <description>The trackers_brubotics package</description>

  <maintainer email="sofia@todo.todo">sofia</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>mrs_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>mrs_cvxy</depend>
  <depend>mrs_uav_managers</depend>
  <depend>dynamic_reconfigure</depend>

  <export>
    <mrs_uav_managers plugin="${prefix}/plugins.xml" />
  </export>

</package>
