<?xml version="1.0"?>
<package format="2">

  <name>trackers_brubotics</name>
  <version>1.0.0</version>
  <description>The trackers_brubotics package</description>

  <author email="bryan.convens@gmail.com">Bryan Convens</author>
  <maintainer email="bryan.convens@gmail.com">Bryan Convens</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  
  <build_depend>message_generation</build_depend> <!-- added by brubotics -->


  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>mrs_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>mrs_uav_managers</depend>
  <depend>mrs_uav_trackers</depend>
  <depend>dynamic_reconfigure</depend>
  <!-- added by brubotics: -->
  <depend>std_msgs</depend>
  <!-- added by brubotics: -->
  <exec_depend>message_runtime</exec_depend>

  <export>
    <mrs_uav_managers plugin="${prefix}/plugins.xml" />
  </export>

</package>
